Add files via upload
Added List, Home page updated, Style updated,