@@ -10,22 +10,18 @@ import java.security.InvalidKeyException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Arrays;
-import java.util.Base64;
-import javax.crypto.BadPaddingException;
  
 import javax.crypto.Cipher;
-import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
  
 public class AES {
  
     private static SecretKeySpec secretKey;
     private static byte[] key;
     final static String SECRET_KEY = "P&U*H!Bhs@m!x0ay@Dl2I1ZY";
-   public static void main(String args[]){
-       System.out.println(Encrypt("akash"));
-   }
+  
     private static void setKey(String myKey)
     {
         MessageDigest sha = null;
@@ -47,9 +43,9 @@ public class AES {
             setKey(SECRET_KEY);
             Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
             cipher.init(Cipher.ENCRYPT_MODE, secretKey);
-            return Base64.getEncoder().encodeToString(cipher.doFinal(strToEncrypt.getBytes("UTF-8")));
+            return DatatypeConverter.printBase64Binary(strToEncrypt.getBytes("UTF-8"));
         }
-        catch (UnsupportedEncodingException | InvalidKeyException | NoSuchAlgorithmException | BadPaddingException | IllegalBlockSizeException | NoSuchPaddingException e)
+        catch (UnsupportedEncodingException | InvalidKeyException | NoSuchAlgorithmException | NoSuchPaddingException e)
         {
             System.out.println("Error while encrypting: " + e.toString());
         }
